crates/aranya-policy-compiler/tests/data/commands/field_insertion_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
3 |         +Bar, // Bar is not defined
  |          ^^^ struct Bar is not defined
